<?xml version="1.0" encoding="utf-8"?>



    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cvRestaurante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="@dimen/corner_radius_cardview">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imagen_cardView"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                />

            <TextView
                android:id="@+id/nombre_cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imagen_cardView"
                android:text="@string/pNombre"
                android:textColor="#000000"
                android:textSize="@dimen/nombre_cardview"
                android:textStyle="bold"
                android:layout_margin="@dimen/corner_radius_cardview"/>


            <ImageView
                android:id="@+id/icon_ubicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nombre_cardView"

                android:layout_margin="@dimen/corner_radius_cardview"/>

            <TextView
                android:id="@+id/ubicacion_cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/icon_ubicacion"
                android:layout_below="@id/nombre_cardView"
                android:text="@string/pUbicacion"
                android:textColor="#BDBDBD"
                android:layout_margin="@dimen/corner_radius_cardview"/>

            <ImageView
                android:id="@+id/icon_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ubicacion_cardView"

                android:layout_margin="@dimen/corner_radius_cardview"/>

            <TextView
                android:id="@+id/telefono_cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/icon_telefono"
                android:layout_below="@id/ubicacion_cardView"
                android:text="@string/pTelefono"
                android:textColor="#BDBDBD"
                android:layout_margin="@dimen/corner_radius_cardview"/>

            <ImageView
                android:id="@+id/icon_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_below="@id/icon_telefono"
                android:layout_margin="@dimen/corner_radius_cardview"/>

            <TextView
                android:id="@+id/email_cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/icon_email"
                android:layout_below="@id/telefono_cardView"
                android:text="@string/pEmail"
                android:textColor="#BDBDBD"
                android:layout_margin="@dimen/corner_radius_cardview"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>